# openai-speech

./: README.md
oai/: .gitignore  ctrl_c_handler.py  main.py  pyproject.toml  version01.py  version02.py
