[tool.poetry]
name = "oai"
version = "0.1.0"
description = ""
authors = ["Bernd Prager <bernd@prager.ws>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"
pyttsx3 = "^2.90"
speechrecognition = "^3.10.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
