[tool.poetry]
name = "oai"
version = "0.1.0"
description = ""
authors = ["Bernd Prager <bernd@prager.ws>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.9"
openai = "^0.27.4"
pyttsx3 = "^2.90"
speechrecognition = "^3.10.0"
python-dotenv = "^1.0.0"
boto3 = "^1.26.120"
edgegpt = "^0.2.1"
pydub = "^0.25.1"
openai-whisper = "^20230314"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
